--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'roboto', Courier, monospace;
+    margin: 0px;
 }
 
 /*HEADER*/
@@ -164,7 +165,7 @@ blockquote > p {
 
 .prompt {
     background-color: #3882f6;
-    padding: 40px 90px;
+    padding: 25px 120px;
     border-radius: 15px;
     display: flex;
     justify-content: space-around;
@@ -175,6 +176,28 @@ blockquote > p {
 .prompt > button {
     border: 2px solid #F9FAF8;
 }
+
+.prompt-text p {
+    color: #F9FAF8;;
+}
+
+.action-call {
+    font-size: 23px;
+    font-weight: bold;
+    margin-bottom: 1px;
+}
+
+.action-call + p {
+    margin-top: 0px;
+}
+
+footer {
+    text-align: center;
+    padding: 35px;
+    font-size: 17px;
+    color: #F9FAF8;
+}
+
 
 header,
 footer {
