--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,13 @@ button {
     background-color: rgb(123, 131, 149);
 }
 
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 /*HEADER*/
+
 /*INFO - START*/
 .info {
     margin-top: 40px;
@@ -121,6 +127,10 @@ button {
     border-radius: 15px;
     width: 150px;
     height: 150px;
+}
+
+.card img {
+    border-radius: 11px;
 }
 
 .card > p {
